[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.21"
tokio = { version = "1.3.0", features = ["rt", "time", "macros", "sync"] }
ed25519-dalek = "1.0.1"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
bincode = "1.3.1"
futures = "0.3.8"
async-recursion = "1.0.0"
base64 = "0.13.0"
async-trait = "0.1.50"

[dev-dependencies]
tokio-util = { version = "0.7.3", features= ["codec"] }
rand = "0.7.3"

